Buttons to select 1 or 2 player mode

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
 
 	<div id="game-wrapper">
-
+		<div id="player-choice">
+				<button onclick="setPlayMode(1);">1 Player</button>
+				<button onclick="setPlayMode(2);">2 Player</button>
+			</div>
 		<div id="game-header">
-			Player 1's Turn
+			Please select 1 or 2 Player mode
 		</div>
 
 		<div id="board-wrapper">
