--- a/index.html
+++ b/index.html
@@ -10,18 +10,30 @@
 <body>
 
 	<div id="game-wrapper">
+		<div id="game-header">
+			Please select 1 or 2 Player mode
+		</div>
+
 		<div id="player-choice">
-				<button id="one" onclick="setPlayMode(1);">1 Player</button>
-				<button id="two" onclick="setPlayMode(2);">2 Player</button>
+				<button onclick="setPlayMode(1);">1 Player</button>
+				<button id="two" onclick="setPlayMode(2);">2 Players</button>
 		</div>
 		<div id="reset">
 			<button onclick="resetGame()">Play Again?</button>
 		</div>
-		<div id="game-header">
-			Please select 1 or 2 Player mode
-		</div>
+		
       
 		<div id="board-wrapper">
+
+		    <div class="winline" id="left-diag"></div>
+			<div class="winline" id="right-diag"></div>
+			<div class="winline" id="top-horiz"></div>
+			<div class="winline" id="mid-horiz"></div>
+			<div class="winline" id="bottom-horiz"></div>
+			<div class="winline" id="left-vert"></div>
+			<div class="winline" id="mid-vert"></div>
+			<div class="winline" id="right-vert"></div>
+
 			<div id="row1">
 				<button class="left square empty" id="a1" onclick="addSymbol(this);"></button>
 				<button class="square empty" id="a2" onclick="addSymbol(this);"></button>
